--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-	<styles>
+	<style>
 		* {
 			background-color: black;
 			color: white;
 		}
-	</styles>	
+	</style>	
 	<script type="text/javascript" src="tools.js"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
